# komodo

./: .gitignore  Cargo.toml  dev.compose.yaml  readme.md  roadmap.md  runfile.toml
.devcontainer/: dev.compose.yaml  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml
client/core/rs/: Cargo.toml  README.md
client/core/rs/src/: busy.rs  lib.rs  request.rs  terminal.rs  ws.rs
client/core/rs/src/api/: auth.rs  mod.rs  terminal.rs  user.rs
client/core/rs/src/deserializers/: conversion.rs  environment.rs  file_contents.rs  forgiving_vec.rs  item_or_vec.rs  labels.rs  maybe_string_i64.rs  mod.rs  permission.rs  string_list.rs  term_signal_labels.rs
client/core/rs/src/entities/: action.rs  alert.rs  alerter.rs  build.rs  builder.rs  deployment.rs  logger.rs  mod.rs  permission.rs  procedure.rs  repo.rs  resource.rs  schedule.rs  server.rs  stack.rs  stats.rs  sync.rs  tag.rs  toml.rs  update.rs  user.rs  user_group.rs
client/core/ts/: README.md  generate_types.mjs  package.json  runfile.toml
client/core/ts/src/: lib.ts  responses.ts  terminal.ts  types.ts
client/periphery/rs/: Cargo.toml
client/periphery/rs/src/: lib.rs  terminal.rs
client/periphery/rs/src/api/: build.rs  compose.rs  container.rs  git.rs  mod.rs  terminal.rs
compose/: compose.env  ferretdb.compose.yaml  mongo.compose.yaml  periphery.compose.yaml  postgres.compose.yaml  sqlite.compose.yaml
config/: core.config.toml  komodo.cli.toml  periphery.config.toml
deploy/: komodo.ts
docsite/: docusaurus.config.ts  package.json  runfile.toml  sidebars.ts
docsite/docs/: connect-servers.mdx  development.md  intro.md  other-resources.md  permissioning.md  resources.md  sync-resources.md  version-upgrades.md
docsite/docs/build-images/: builders.md  configuration.md
docsite/docs/ecosystem/: api.md  cli.mdx  community.md  development.md  index.mdx
docsite/docs/resources/: auto-update.md  index.md  permissioning.md  procedures.md  variables.md  webhooks.md
docsite/docs/resources/build-images/: builders.md  configuration.md
docsite/docs/resources/deploy-containers/: configuration.md
docsite/docs/setup/: advanced.mdx  backup.md  connect-servers.mdx  ferretdb.mdx  index.mdx  mongo.mdx  postgres.mdx  sqlite.mdx
docsite/src/components/: ComposeAndEnv.tsx
docsite/src/pages/: index.tsx
example/alerter/: Dockerfile
example/update_logger/: Dockerfile
example/update_logger/src/: main.rs
frontend/: Dockerfile  package.json  runfile.toml  tailwind.config.js  tsconfig.json
frontend/public/: index.d.ts
frontend/public/client/: lib.d.ts  lib.js  responses.d.ts  terminal.d.ts  terminal.js  types.d.ts  types.js
frontend/src/: globals.css  main.tsx  router.tsx
frontend/src/components/: export.tsx  group-actions.tsx  inspect.tsx  layouts.tsx  log.tsx  monaco.tsx  omnibar.tsx  sidebar.tsx  terminal.tsx  topbar.tsx  util.tsx
frontend/src/components/alert/: topbar.tsx
frontend/src/components/config/: index.tsx  linked_repo.tsx  maintenance.tsx  util.tsx
frontend/src/components/resources/: common.tsx  index.tsx
frontend/src/components/resources/action/: config.tsx  index.tsx  table.tsx
frontend/src/components/resources/alerter/: index.tsx
frontend/src/components/resources/builder/: config.tsx  index.tsx
frontend/src/components/resources/deployment/: index.tsx  inspect.tsx  log.tsx  table.tsx  terminal.tsx
frontend/src/components/resources/procedure/: config.tsx  index.tsx  table.tsx
frontend/src/components/resources/repo/: actions.tsx  config.tsx  index.tsx  table.tsx
frontend/src/components/resources/resource-sync/: actions.tsx  config.tsx  index.tsx  info.tsx  pending.tsx  table.tsx
frontend/src/components/resources/server/: actions.tsx  config.tsx  index.tsx  monitoring-table.tsx  stat-chart.tsx  stats-mini.tsx  stats.tsx  table.tsx  (+1 more)
frontend/src/components/resources/server-template/: index.tsx
frontend/src/components/tags/: index.tsx
frontend/src/components/terminal/: container.tsx  index.tsx  server.tsx
frontend/src/components/topbar/: components.tsx  index.tsx
frontend/src/components/updates/: details.tsx  topbar.tsx
frontend/src/components/users/: delete-user-group.tsx  hooks.ts  new.tsx  permissions-selector.tsx  permissions-table.tsx  resource-type-permissions.tsx
frontend/src/lib/: color.ts  dashboard-preferences.ts  formatting.ts  hooks.ts  socket.tsx  utils.ts
frontend/src/monaco/: fancy_toml.ts  index.ts  init.ts  toml.ts  yaml.ts
frontend/src/pages/: alerts.tsx  containers.tsx  login.tsx  resource.tsx  resources.tsx  schedules.tsx  update.tsx  updates.tsx  user-group.tsx  user.tsx  user_disabled.tsx
frontend/src/pages/home/: all_resources.tsx  dashboard.tsx  index.tsx  tree.tsx
frontend/src/pages/server-info/: image.tsx  network.tsx  volume.tsx
frontend/src/pages/settings/: index.tsx  providers.tsx  tags.tsx  users.tsx  variables.tsx
frontend/src/pages/stack-service/: index.tsx  inspect.tsx  log.tsx
frontend/src/ui/: card.tsx  data-table.tsx  dialog.tsx  multi-select.tsx  theme.tsx  tooltip.tsx
lib/cache/src/: lib.rs
lib/command/: Cargo.toml
lib/command/src/: lib.rs
lib/config/: Cargo.toml
lib/config/src/: error.rs  includes.rs  lib.rs  load.rs  merge.rs
lib/database/: Cargo.toml
lib/database/src/: lib.rs
lib/database/src/utils/: backup.rs  copy.rs  mod.rs  restore.rs
lib/environment/: Cargo.toml
lib/environment/src/: lib.rs
lib/environment_file/src/: lib.rs
lib/formatting/src/: lib.rs
lib/git/: Cargo.toml
lib/git/src/: clone.rs  commit.rs  environment.rs  init.rs  lib.rs  pull.rs  pull_or_clone.rs
lib/interpolate/: Cargo.toml
lib/interpolate/src/: lib.rs
lib/logger/src/: lib.rs  otel.rs
lib/response/src/: lib.rs
scripts/: install-cli.py  readme.md  setup-periphery.py
(+78 files in other folders)
