[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
indexmap.workspace = true
wildcard.workspace = true
colored.workspace = true
regex.workspace = true
serde.workspace = true
toml.workspace = true