[package]
name = "environment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
komodo_client.workspace = true
formatting.workspace = true
#
anyhow.workspace = true
tokio.workspace = true