[package]
name = "git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
komodo_client.workspace = true
formatting.workspace = true
command.workspace = true
cache.workspace = true
#
run_command.workspace = true
#
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true